/* This defines the interface between the fold runtime and an application
 * for inbound traffic. I.e., it manages inbound requests or events on the
 * way in and passes them on to application.
 */
syntax = "proto3";
package ingress;

option go_package = "github.com/foldsh/fold/runtime/subprocess/pb";

import "http.proto";
import "manifest.proto";

service FoldIngress {
  // Retrieve the manifest from the service.
  rpc GetManifest(ManifestReq) returns (manifest.Manifest) {}

  // Ask the service to process an HTTP request.
  rpc DoRequest(http.FoldHTTPRequest) returns (http.FoldHTTPResponse) {}
}

message ManifestReq {}

